--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@
 
   /* Apply custom styles to html, body, and the root element */
   html, body, #root {
-    @apply min-h-screen m-0 p-0;
+    @apply min-h-screen m-0 p-0 bg-stone-50 text-stone-300;
     line-height: 1.5;
     font-weight: 400;
     scroll-behavior: smooth;
@@ -48,9 +48,15 @@
 
 @layer utilities {
   .shadow-top {
-    box-shadow: 
-       0 -10px 15px -3px rgba(0, 0, 0, 0.1),
-       0 -4px 6px -2px rgba(0, 0, 0, 0.05);
+    box-shadow:
+      0 -10px 15px -3px rgba(0, 0, 0, 0.1),
+      0 -4px 6px -2px rgba(0, 0, 0, 0.05);
+  }
+
+  .shadow-top-lg {
+    box-shadow:
+      0 -12px 20px -5px rgba(0, 0, 0, 0.1),
+      0 -6px 10px -3px rgba(0, 0, 0, 0.05);
   }
   .shadow-all {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
